<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rl_1"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ly_wd"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:orientation="vertical"
                android:background="@drawable/cardshape"
                android:weightSum="1">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:id="@+id/tv1"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/service_wd"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/websitedesign"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv2"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white"
                    android:text="@string/wd_content"
                    android:textSize="15sp"
                    />

            </LinearLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ly_sd"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:orientation="vertical"
                android:background="@drawable/cardshape"
                android:layout_marginTop="15dp"
                android:weightSum="1"
                android:layout_below="@+id/ly_wd">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:id="@+id/tv3"
                    android:layout_gravity="center"

                    android:text="@string/service_sd"
                    android:textSize="20sp"
                    android:textColor="@color/white"/>

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/softwaredevelopment"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:id="@+id/tv4"
                    android:layout_marginTop="10dp"
                    android:text="@string/sd_content"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    />

            </LinearLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ly_gd"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:orientation="vertical"
                android:background="@drawable/cardshape"
                android:layout_marginTop="15dp"
                android:weightSum="1"
                android:layout_below="@+id/ly_sd">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:id="@+id/tv5"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/service_gd"
                    android:textSize="20sp"
                    android:textColor="@color/white"/>

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/graphicdesign"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv6"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/gd_content"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    />

            </LinearLayout>





            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ly_seo"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:orientation="vertical"
                android:background="@drawable/cardshape"
                android:layout_marginTop="15dp"
                android:weightSum="1"
                android:layout_below="@+id/ly_gd">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:id="@+id/tv7"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/service_seo"
                    android:textSize="20sp"
                    android:textColor="@color/white"/>

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/seo"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv8"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/seo_content"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ly_md"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:orientation="vertical"
                android:background="@drawable/cardshape"
                android:layout_marginTop="15dp"
                android:weightSum="1"
                android:layout_below="@+id/ly_seo">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:id="@+id/tv9"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/service_md"
                    android:textSize="20sp"
                    android:textColor="@color/white"/>

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/mobileapp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv10"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/md_content"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    />

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ly_ev"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:orientation="vertical"
                android:background="@drawable/cardshape"
                android:layout_marginTop="15dp"
                android:weightSum="1"
                android:layout_below="@+id/ly_md">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:id="@+id/tv11"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/service_ev"
                    android:textSize="20sp"
                    android:textColor="@color/white"/>

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/videoexplainer"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:id="@+id/tv12"
                    android:layout_marginTop="10dp"
                    android:text="@string/ev_content"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    />

            </LinearLayout>






            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ly_dm"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:orientation="vertical"
                android:background="@drawable/cardshape"
                android:layout_marginTop="15dp"
                android:weightSum="1"
                android:layout_below="@+id/ly_ev">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:id="@+id/tv13"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/service_dm"
                    android:textSize="20sp"
                    android:textColor="@color/white"/>

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/digitalmarketing"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv14"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/dm_content"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ly_es"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:orientation="vertical"
                android:background="@drawable/cardshape"
                android:layout_marginTop="15dp"
                android:weightSum="1"
                android:layout_below="@+id/ly_dm">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:id="@+id/tv15"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/service_es"
                    android:textSize="20sp"
                    android:textColor="@color/white"/>

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/ecommerce"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv16"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/es_content"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    />

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ly_bpo"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:orientation="vertical"
                android:background="@drawable/cardshape"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:weightSum="1"
                android:layout_below="@+id/ly_es">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:id="@+id/tv17"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/service_bpo"
                    android:textSize="20sp"
                    android:textColor="@color/white"/>

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/graphicdesign"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv18"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/bpo_content"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    />

            </LinearLayout>



        </RelativeLayout>



    </ScrollView>

</RelativeLayout>